--- a/index.html
+++ b/index.html
@@ -6,8 +6,19 @@
     <title>VUE HELLO</title>
     <!--Css-->
     <link rel="stylesheet" href="css/style.css">
+    <!--VUE-->
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 </head>
 <body>
+    <div class="box" id="app">
+        <h1>
+           {{ message }}  
+        </h1>
+       
+    </div>
+
+
+    <!--JS-->
     <script src="js/main.js"></script>
 </body>
 </html>
